# simple-2d-strilalka

./: CMakeLists.txt  conanfile.txt
Engine/: Actor.cpp  Actor.hpp  CMakeLists.txt  Character.hpp  Scene.cpp  Scene.hpp  TailMap.cpp  TailMap.hpp  Unit.cpp  Unit.hpp  conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt  defines.h  graph_info.json
Engine/Components/: file_manager.hpp  mass_data.hpp  matrix.hpp
Game/: CMakeLists.txt  MainHero.cpp  MainHero.h  conanbuildinfo.cmake  conanbuildinfo.txt  main.cpp
ResDir/: COLOR_TEST_PNG.lua  COLOR_TEST_PNG.tsx  REALTEST2.lua  REALTEST2.tsx  REALTESTMAP2.lua  REALTESTMAP2.tmx  TEST.lua  TEST.tmx  TestTile.lua  TestTile.tsx  main_hero_tailmap.tmx  main_hero_tileset.tsx
src/: CMakeLists.txt  Hero.cpp  Hero.hpp  Scene.cpp  Scene.hpp  TailMap.cpp  TailMap.hpp  Unit.cpp  Unit.hpp  conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt  defines.h  graph_info.json  main.cpp  tailMap.lua
src/Engine/: Hero.cpp  Hero.hpp  Scene.cpp  Scene.hpp  TailMap.cpp  TailMap.hpp  Unit.cpp  Unit.hpp  defines.h
src/Engine/Components/: file_manager.hpp  mass_data.hpp  matrix.hpp
src/Tests/: Hero.test.hpp  main.test.hpp
